handling login and create template admin index

--- a/assets/css/style.default.css
+++ b/assets/css/style.default.css
@@ -3468,3 +3468,7 @@ pre code {
   background: #2d3035;
   border-color: #34373d;
 }
+div#flash-container {
+  width: 100%;
+  text-align: center;
+}
