--- a/views/Admin/Login.html
+++ b/views/Admin/Login.html
@@ -23,6 +23,14 @@
         <div class="container d-flex align-items-center">
             <div class="form-holder has-shadow">
                 <div class="row">
+                    <div id="flash-container">
+                    {{ range .FlashedMessages }}
+                        <div id="flash-message" class="alert alert-box-fixed0 alert-box-fixed alert-dismissible {{.Class}}" role="alert">
+                        <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                        {{.Message}}</div>
+                        <!-- <div data-alert id="flash-message" class="alert-box-fixed0 alert-box-fixed {{.Class}}">{{.Message}}<a href="#" class="close">&times;</a></div> -->
+                    {{end}}
+                    </div>
                     <!-- Logo & Information Panel-->
                     <div class="col-lg-6">
                         <div class="info d-flex align-items-center">
@@ -44,7 +52,7 @@
                                         {{ .csrfField }}
                                     <div class="form-group ">
                                         <input id="login-username" type="text" name="UserName" required
-                                            data-msg="Vui lòng nhập username" value="" class="input-material">
+                                            data-msg="Vui lòng nhập username" value="{{ .UserName }}" class="input-material">
                                         <label for="login-username" class="label-material">User Name</label>
                                     </div>
                                     <div class="form-group">
@@ -62,6 +70,7 @@
                 </div>
             </div>
         </div>
+        
         <div class="copyrights text-center">
             <p>Design by <a href="/" class="external">JPME</a></p>
             <!-- Please do not remove the backlink to us unless you support further theme's development at https://bootstrapious.com/donate. It is part of the license conditions. Thank you for understanding :)-->
